--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +13,24 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header img {
+  pointer-events: none;
+  width: 450px;
+  height: 600px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 800px) {
+  .App-header img {
+    width: 350px;
+    height: 400px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .App-header img {
+    width: 250px;
+    height: 300px;
+  }
+}
+
+
