:lipstick: added new Google Fonts Qwigley. Stored in /public/fonts/qwigley

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+/* latin */
+/* http://fonts.googleapis.com/css?family=Qwigley */
+@font-face {
+  font-family: 'Qwigley';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../public/fonts/qwigley/1cXzaU3UGJb5tGoCiVtmig.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 .App {
   text-align: center;
 }
@@ -10,12 +20,10 @@
   align-items: center;
   justify-content: center;
   font-size: calc(50px + 2vmin);
-  /*
-  Google Fonts: https://fonts.google.com/
-  http://fonts.googleapis.com/css?family=Qwigley
-  */
+  /* Google Fonts: https://fonts.google.com/ */
   font-family: 'Qwigley', Helvetica, Sans-serif;  color: #fff;
-	color: #333;}
+	color: #333;
+}
 
 .App-header img {
   pointer-events: none;
